# VML-maths

./: .gitignore  CMakeLists.txt  ReadMe.md  main.c  vml.c
include/: matrix.h  vectors.h  vml.h
libs/windows/: libvml.lib
src/: matrix.c  vector.c  vml.c
